[Payment Request] log if `updateWith` is not called synchronously https://bugs.webkit.org/show_bug.cgi?id=222436

Reviewed by Andy Estes.

Source/WebCore:

Test: http/tests/paymentrequest/updateWith-log-error-if-not-synchronous.https.html

* Modules/paymentrequest/PaymentRequest.h:
* Modules/paymentrequest/PaymentRequest.cpp:
(WebCore::PaymentRequest::shippingAddressChanged):
(WebCore::PaymentRequest::shippingOptionChanged):
(WebCore::PaymentRequest::paymentMethodChanged):
(WebCore::PaymentRequest::dispatchAndCheckUpdateEvent): Added.

* Modules/paymentrequest/PaymentRequestUpdateEvent.h:
(WebCore::PaymentRequestUpdateEvent::didCallUpdateWith const): Added.

LayoutTests:

* http/tests/paymentrequest/updateWith-log-error-if-not-synchronous.https.html: Added.
* http/tests/paymentrequest/updateWith-log-error-if-not-synchronous.https-expected.txt: Added.

* http/tests/paymentrequest/payment-request-change-shipping-address.https.html:
* http/tests/paymentrequest/payment-request-change-shipping-option.https.html:
* http/tests/paymentrequest/payment-request-show-method.https.html:
* http/tests/ssl/applepay/ApplePayBillingAddress.html:
* http/tests/ssl/applepay/ApplePayPaymentMethodChangeEvent.https.html:
Add `updateWith({})` calls to avoid the log.


Canonical link: https://commits.webkit.org/234622@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@273562 268f45cc-cd09-0410-ab3c-d52691b4dbfc